[tool.poetry]
name = "chatgpt-foodnutritiondata"
version = "0.1.0"
description = ""
authors = ["MorWainberg <mor.wainberg.97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.1"
torchvision = "^0.20.1"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.5"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
