[tool.poetry]
name = "chatgpt-foodnutritiondata"
version = "0.1.0"
description = ""
authors = ["MorWainberg <mor.wainberg.97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.54.1"
torchvision = "^0.20.1"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.5"
streamlit = "^1.39.0"
langchain = "^0.3.7"
datetime = "^5.5"
streamlit-authenticator = "0.1.5"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
